--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@astrojs/rss": "^2.4.1",
     "@resvg/resvg-js": "^2.4.1",
+    "@vercel/analytics": "^1.0.1",
     "astro": "^2.4.5",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
